# web

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/hooks/: prepare-commit-msg
.github/workflows/: migrations.yml
kockatykalendar/: asgi.py  entrypoint.sh  manage.py  settings.py
kockatykalendar/kockatykalendar/: settings.py  urls.py  wsgi.py
reports/: week_10.md  week_11.md  week_12.md  week_5.md  week_6.md  week_7.md  week_8.md  week_9.md
