[tool.poetry]
name = "kockatykalendar"
version = "0.1.0"
description = ""
authors = ["Matej Novota <matej.novota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
uvicorn = "^0.29.0"
django-environ = "^0.11.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
